# dbt-sqlserver

./: .git-blame-ignore-revs  .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  connection_example.ipynb  cursor_batch_example.ipynb  dbtSynapse.yml  dev_requirements.txt  docker-compose.yml  pyodbc.Dockerfile  pyodbc.dockerfile  pyproject.toml  pytest.ini  requirements.txt  setup.py  temp.ipynb  test.env.sample  tox.ini  verify_no_pyodbc.py
.circleci/: Dockerfile  config.yml  wakeup_azure.py
.devcontainer/: devcontainer-lock.json  devcontainer.json  install_pyenv.sh  setup_env.sh  setup_odbc.sh
.github/: Dockerfile  dependabot.yml
.github/scripts/: verify_version.py
.github/workflows/: integration-tests-azure.yml  integration-tests-sqlserver.yml  integration-tests.yml  pre-commit.yml  publish-docker.yml  release-version.yml  stale.yml  unit-tests.yml
dbt/adapters/fabric/: __init__.py  __version__.py  fabric_adapter.py  fabric_column.py  fabric_configs.py  fabric_connection_manager.py  fabric_credentials.py
dbt/adapters/sqlserver/: __init__.py  __version__.py  column.py  connections.py  impl.py  monitor.py  relation.py  sql_server_adapter.py  sql_server_column.py  sql_server_configs.py  sql_server_connection_manager.py  sql_server_credentials.py  sqlserver_adapter.py  sqlserver_auth.py  sqlserver_backend.py  sqlserver_column.py  sqlserver_configs.py  sqlserver_connections.py  sqlserver_constants.py  sqlserver_credentials.py  sqlserver_health.py  sqlserver_helpers.py  sqlserver_mask.py  sqlserver_relation.py  sqlserver_runtime.py
dbt/adapters/sqlserver/relation_configs/: __init__.py  index.py  policies.py
dbt/include/fabric/: dbt_project.yml
dbt/include/fabric/macros/adapters/: apply_grants.sql  catalog.sql  columns.sql  indexes.sql  metadata.sql  relation.sql  schema.sql  show.sql
dbt/include/fabric/macros/utils/: any_value.sql  array_construct.sql  cast_bool_to_text.sql  concat.sql  date_trunc.sql  dateadd.sql  hash.sql  last_day.sql  length.sql  listagg.sql  position.sql  safe_cast.sql  split_part.sql  timestamps.sql
dbt/include/sqlserver/: __init__.py  dbt_project.yml  profile_template.yml
dbt/include/sqlserver/macros/: adapters.sql  catalog.sql  indexes.sql  merge.sql  readme.md  schema_tests.sql
dbt/include/sqlserver/macros/adapter/: apply_grants.sql  catalog.sql  columns.sql  indexes.sql  metadata.sql  relation.sql  schemas.sql  validate_sql.sql
dbt/include/sqlserver/macros/adapters/: apply_grants.sql  catalog.sql  (+10 more)
dbt_sqlserver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
devops/: CI.Dockerfile  Dockerfile  create_sql_users.sql  server.Dockerfile
devops/scripts/: entrypoint.sh  init.sql  init_db.sh  wakeup_azure.py
sqlserver/dbt/adapters/sqlserver/: __init__.py  connections.py
sqlserver/dbt/include/sqlserver/: dbt_project.yml
sqlserver/dbt_sqlserver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/integration/: azuresql.dbtspec  dbt_project.yml  sample.profiles.yml  sqlserver.dbtspec
test/integration/models/: test.sql
test/unit/adapters/sqlserver/: test_connections.py
tests/: __init__.py  conftest.py
tests/functional/adapter/: test_aliases.py  test_basic.py  test_caching.py  test_changing_relation_type.py  test_column_types.py  test_concurrency.py  test_constraints.py  test_data_types.py  test_dbt_clone.py  test_dbt_show.py  test_debug.py  test_docs.py  test_ephemeral.py  test_equals.py  test_get_last_relation_modified.py  test_grants.py  test_hooks.py  test_incremental.py  test_list_relations_without_caching.py  test_new_project.py  test_null_compare.py  test_persist_docs.py  test_provision_users.py  test_query_comment.py  test_relation_types.py  test_relations.py  test_schema.py  test_seed.py  test_simple_copy.py  test_simple_seed.py  test_simple_snapshot.py  test_snapshot.py  test_sources.py  test_store_test_failures.py  test_timestamps.py  test_utils.py  test_utils_data_types.py
tests/functional/adapter/dbt/: test_aliases.py  test_basic.py  test_caching.py  test_catalog.py  test_column_types.py  test_concurrency.py  test_constraints.py  test_data_types.py  test_dbt_clone.py  test_dbt_debug.py  test_dbt_show.py  test_empty.py  test_ephemeral.py  test_equals.py  test_get_last_relation_modified.py  test_grants.py  test_hooks.py  test_incremental.py  test_incremental_microbatch_datetime.py  test_list_relations_without_caching.py  test_materialized_views.py  test_null_compare.py  test_persist_docs.py  test_python_model.py  test_query_comment.py  test_relation_types.py  test_relations.py  test_sample_mode.py  test_schema.py  test_simple_seed.py  test_simple_snapshot.py  test_snapshot_configs.py  test_snapshot_new_record_mode.py  test_sources.py  test_store_test_failures.py  test_timestamps.py  test_transactions.py  test_unit_tests.py  test_utils.py
tests/functional/adapter/mssql/: test_column_type_expansion.py  test_cross_db.py  test_db_non_standard.py  test_full_refresh_build.py  test_get_view_definition.py  test_index.py  test_index_config.py  test_index_macros.py  test_interaction_tablock_query_options.py  test_leading_comments.py  test_limit_none.py  test_masks.py  test_materialize_change.py  test_max_string_expansion.py  test_mssql_seed.py  test_native_string_types.py  test_provision_users.py  test_query_options.py  test_reserved_keywords_schema.py  test_snapshot_multikey.py  test_store_failures_passing.py  test_table_refresh_method.py  test_tablock_hint.py  test_temp_relation_cleanup.py  test_test_with.py  test_xml_index.py
tests/integration/: dbt_project.yml  sqlserver.dbtspec
tests/unit/adapters/fabric/: test_sql_server_connection_manager.py
tests/unit/adapters/mssql/: test_can_expand_to.py  test_connection_logic.py  test_expand_column_types.py  test_generate_schema_name.py  test_index_configs.py  test_index_diff.py  test_indexes.py  test_mask.py  test_sqlserver_column.py  test_sqlserver_connection_manager.py  test_sqlserver_health.py
tests/unit/adapters/sqlserver/: test_connections.py  test_sql_server_connection_manager.py
(+66 files in other folders)
