[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "1.7.4"
name = "dbt-sqlserver"
description = "A Microsoft SQL Server adapter plugin for dbt"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mikael Ene" },
    { name = "Anders Swanson" },
    { name = "Sam Debruyn" },
    { name = "Cor Zuurmond" },
    { name = "Ty Schlichenmeyer", email = "ty.schlich@gmail.com" },
    # dbt-fabric:
    { name = "Pradeep Srikakolapu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dbt-core",
    "pyodbc",
    "pre-commit",
    "pytest",
    "ruff",
    "dbt-tests-adapter",
    "azure-identity",
]


[project.urls]
Homepage = "https://github.com/dbt-msft/dbt-sqlserver"
"Setup & configuration" = "https://docs.getdbt.com/reference/warehouse-profiles/mssql-profile"
"Documentation & usage" = "https://docs.getdbt.com/reference/resource-configs/mssql-configs"
Changelog = "https://github.com/dbt-msft/dbt-sqlserver/blob/master/CHANGELOG.md"
"Issue Tracker" = "https://github.com/dbt-msft/dbt-sqlserver/issues"

[tool.hatch.build.targets.wheel]
packages = ["dbt"]

[tool.pytest.ini_options]
env_files = ["test.env"]
testpaths = ["tests/unit", "tests/functional"]
markers = ["skip_profile", "only_with_profile"]
addopts = "--import-mode=importlib"

[tool.ruff]
select = ["ALL"]
fix = true

[tool.pyright]
include = ["dbt"]
pythonVersion = "3.12"
venvPath = ".venv"
venv = "dbt_sqlserver"
