[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-sqlserver"
description = "A Microsoft SQL Server adapter plugin for dbt"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mikael Ene" },
    { name = "Anders Swanson" },
    { name = "Sam Debruyn" },
    { name = "Cor Zuurmond" },
    { name = "Cody Scott" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dbt-core>=1.10.0,<2.0",
    "dbt-common>=1.22.0,<2.0",
    "dbt-adapters>=1.15.2,<2.0",
    "pyodbc>=5.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.12.0",
]
pyodbc = [
    "pyodbc>=5.2.0",
]
mssql = [
    "mssql-python>=1.7.1",
    "azure-identity>=1.12.0",
    "azure-core>=1.0.0",
]

[dependency-groups]
dev = [
    "dbt-tests-adapter>=1.15.0,<2.0",
    "azure-identity>=1.12.0",
    "pyodbc>=5.2.0",
    "mssql-python>=1.7.1",
    "build",
    "bumpversion",
    "flaky",
    "freezegun>=1.5.0,<2.0",
    "ipdb",
    "mypy==2.1.0",
    "pre-commit",
    "pytest",
    "pytest-csv",
    "pytest-dotenv",
    "pytest-xdist",
    "pytz",
    "ruff",
    "tox>=3.13",
    "twine",
]

[project.urls]
"Setup & configuration" = "https://docs.getdbt.com/reference/warehouse-profiles/mssql-profile"
"Documentation & usage" = "https://docs.getdbt.com/reference/resource-configs/mssql-configs"
"Changelog" = "https://github.com/dbt-msft/dbt-sqlserver/blob/master/CHANGELOG.md"
"Issue Tracker" = "https://github.com/dbt-msft/dbt-sqlserver/issues"
"Source" = "https://github.com/dbt-msft/dbt-sqlserver"

[tool.setuptools.dynamic]
version = { attr = "dbt.adapters.sqlserver.__version__.version" }

[tool.setuptools.packages.find]
include = ["dbt", "dbt.*"]
namespaces = true

[tool.setuptools.package-data]
"dbt" = ["include/**/*.sql", "include/**/*.yml", "include/**/*.md"]
"dbt.adapters.sqlserver" = ["py.typed"]

[tool.uv]
link-mode = "copy"
override-dependencies = ["pathspec>=0.9,<1.1"] # Remove on dbt-core v1.12 or migration to ty by astral

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes (together: flake8), I = isort,
# TID252 = no relative imports (absolufy-imports); unused-import
# removal (pycln) is F401, included in F
select = ["E", "F", "W", "I", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["dbt"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
